--- a/p4.html
+++ b/p4.html
@@ -71,7 +71,7 @@
             text-align: center;
             font-size: 30px;
             letter-spacing: 4px;
-            margin-top: 100px;
+            margin-top: 800px;
             margin-bottom: 5px;
         }
 
@@ -86,11 +86,9 @@
         div.cont{
             margin: auto;
             width: 870px;
-            
             background-color: black;
             border-radius: 3px;
             border: 2px solid;
-            
         }
 
         a.cont{
@@ -243,7 +241,10 @@
     <!--//////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
     <p class="cont" id="6">Estructura HTML</p>
     <div class="cont">
-        <p class="summary"></p>
+        <p class="summary">
+            Una estructura HTML se empieza con la etiqueta <html> y acaba con </html>. Todo lo que esté en medio será la página web. Dentro de <html></html> se encuentran 2 partes diferenciadas.La primera <head></head> es la cabecera de la página. Aquí irán cierta información que no es directamente el contenido de la página. Aquí se pone el título de la página, los metadatos, estilos, código javascript (todo esto se estudiará en capítulos venideros). La primera que se suele estudiar es <title></title>, que indica el título de la página (lo que el navegador pone en la parte superior izquierda). <br><br>
+            La segunda parte es <body></body>. Aquí va propiamente el contenido de la página: fotos, párrafos, formularios, etc. Por ejemplo, siguiendo con el ejemplo de la página anterior, el siguiente código, podemos cambiar el título de la página.
+        </p>
 
     </div>
     <h1 class="cont"><a href="#0" class="cont">Indice</a></h1>
@@ -251,7 +252,11 @@
     <!--//////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
     <p class="cont" id="7">Insertar imágenes en HTML</p>
     <div class="cont">
-        <p class="summary"></p>
+        <p class="summary">
+            <img src=»https://www.yoseomarketing.com/wpcontent/uploads/2017/03/certificado-ssl-98.jpg» alt=»certificado ssl» width=»961″ height=»601″ /> <br><br>
+            Cómo ves, insertar una imagen en HTML en tu web no es nada complicado, y aunque lo habitual es hacerlo a través de la interfaz gráfica de un CMS, también puedes verte en el apuro de tener que hacerlo a mano, como nuestros antepasados programadores. Además, siempre es recomendable acompañar cualquier texto con una imagen, hace el contenido más atractivo y mejora el SEO. <br><br>
+            Ten en cuenta que el tamaño de la imagen debe ser el adecuado para que se vea bien y que si subes una imagen demasiado pesada, afectarás negativamente a la velocidad de carga, así que te recomiendo que sepas cómo cambiar el tamaño de una imagen sin perder calidad.
+        </p>
 
     </div>
     <h1 class="cont"><a href="#0" class="cont">Indice</a></h1>
@@ -259,7 +264,11 @@
     <!--//////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
     <p class="cont" id="8">El papel de CSS</p>
     <div class="cont">
-        <p class="summary"></p>
+        <p class="summary">
+            CSS es uno de los lenguajes base de la Open Web y posee una especificación estandarizada por parte del W3C. Anteriormente , el desarrollo de varias partes de las especificaciones de CSS era realizado de manera sincrónica, lo que permiía el versionado de las recomendaciones. Probablemente habrás escuchado acerca de CSS1, CSS2.1, CSS3. Sin embargo, CSS4 nunca se ha lanzado como una versión oficial. <br><br>
+            Desde CSS3, el alcance de las especificaciones se incrementó de forma significativa y el progreso de los diferentes modulos de CSS comenzó a mostrar varias diferencias, lo que hizo más efectivo desarrollar y publicar recomendaciones separadas por módulos. En vez de versionar las especificaciones de CSS, la W3C actualmente realiza una captura de las ultimas espcificaciones estables de CSS.
+
+        </p>
 
     </div>
     <h1 class="cont"><a href="#0" class="cont">Indice</a></h1>
@@ -452,6 +461,7 @@
             Carlos Rafael Garcia Hernández:<br>
             Al hacer esta actividad me pude dar cuenta de todas las características de los archivos HTML y de las hojas de estilo CSS. Es importante conocer la mayoría de las funciones que se encuentran en cada uno de estos archivos y así poder realizar una página web de manera exitosa y sin errores.<br><br><br>
             Paulina Leon Zabalgoitia:<br>
+            En esta practica pudimos ver lo que era el papel del css en una página web y como es que este puede desarrollar un papel muy bueno en el lenguaje y así poder involucrar nuevas cosas así como no estilos y poder así tener una pagina con mejor estilo y calidad, así también como poder involucrar imágenes o y así poder hacer la página más didáctica y así que sea mejor para el usuario, también así como mas fácil tanto de leer, como de interactuar con esta, y poder lograr una mejor experiencia. 
         </p>
 
     </div>
