--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<a href="p2.html" id="enlacesl">• Práctica #2: Definición de HTML5</a></br></br></br>
 		<a href="p3.html" id="enlacesl">• Práctica #3: Introducción a la presentación en pantalla con CSS</a></br></br></br>
 		<a href="p4.html" id="enlacesl">• Práctica #4: Conceptos básicos de HTML, XHTML y CSS</a></br></br></br>
-		<a href="#" id="enlacesnl">• Práctica #5: Uso de las etiquetas HTML5</a></br></br></br>
+		<a href="p5/practica 5.html" id="enlacesl">• Práctica #5: Uso de las etiquetas HTML5</a></br></br></br>
 		<a href="#" id="enlacesnl">• Práctica #6: Uso del elemento Canvas</a></br></br></br>
 		<a href="#" id="enlacesnl">• Práctica #7: Funciones Drag y Drop de HTML5</a></br></br></br>
 		<a href="#" id="enlacesnl">• Producto Integrador de Aprendizaje</a></br></br></br></br></br></br></br></br></br></br>
