--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<a href="p5/practica 5.html" id="enlacesl">• Práctica #5: Uso de las etiquetas HTML5</a></br></br></br>
 		<a href="p6.html" id="enlacesl">• Práctica #6: Uso del elemento Canvas</a></br></br></br>
 		<a href="p7/p7.html" id="enlacesl">• Práctica #7: Funciones Drag y Drop de HTML5</a></br></br></br>
-		<a href="#" id="enlacesnl">• Producto Integrador de Aprendizaje</a></br></br></br></br></br></br></br></br></br></br>
+		<a href="PIA.html" id="enlacesl">• Producto Integrador de Aprendizaje</a></br></br></br></br></br></br></br></br></br></br>
 
 		<a href="#inte" id="bint">INTEGRANTES</a>
 		<a href="#port" id="bindex">INICIO</a>
